force-app/main/default/objects/BankTransaction__c/BankTransaction__c.object-meta.xml
<CustomObject>
    <label>Bank Transaction</label>
    <nameField>
        <displayFormat>BT-{YYMMDD}-{00000}</displayFormat>
        <label>Bank Transaction No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>