force-app/main/default/objects/BankTransaction__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>KR</value>
        </filterItems>
        <filterItems>
            <field>ACC_AdditionalInfo__c.ActiveKr_is__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>SG</value>
        </filterItems>
        <filterItems>
            <field>ACC_AdditionalInfo__c.ActiveRe_is__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.Region__c</field>
            <operation>equals</operation>
            <value>VN</value>
        </filterItems>
        <filterItems>
            <field>ACC_AdditionalInfo__c.ActiveVn_is__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ACC_AdditionalInfo__c</referenceTo>
    <relationshipLabel>Bank Transactions</relationshipLabel>
    <relationshipName>BankTransactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>