force-app/main/default/objects/BankTransaction__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>Bank Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>