force-app/main/default/objects/BankTransaction__c/fields/CMSID__c.field-meta.xml
<CustomField>
    <fullName>CMSID__c</fullName>
    <externalId>true</externalId>
    <label>CMS ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>