force-app/main/default/objects/BankTransaction__c/fields/CMSSeq__c.field-meta.xml
<CustomField>
    <fullName>CMSSeq__c</fullName>
    <label>CMS Seq</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>