force-app/main/default/objects/BankTransaction__c/fields/NetBalanceAftCleared__c.field-meta.xml
<CustomField>
    <fullName>NetBalanceAftCleared__c</fullName>
    <label>Not-Reconciled AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>