force-app/main/default/objects/BankTransaction__c/fields/TotalClearedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalClearedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Reconciled AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>