force-app/main/default/objects/BankTransaction__c/fields/TransactionDetailType__c.field-meta.xml
<CustomField>
    <fullName>TransactionDetailType__c</fullName>
    <label>Transaction Detail Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>