force-app/main/default/objects/BankTransaction__c/fields/TransactionNotes__c.field-meta.xml
<CustomField>
    <fullName>TransactionNotes__c</fullName>
    <label>Transaction Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>