force-app/main/default/objects/BankTransaction__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>TransactionType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>