force-app/main/default/objects/BankTransaction__c/validationRules/Amount_Cannot_be_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Cannot_be_zero</fullName>
    <active>true</active>
    <description>Amount Cannot be zero</description>
    <errorConditionFormula>OriginAmount__c =    0</errorConditionFormula>
    <errorDisplayField>OriginAmount__c</errorDisplayField>
    <errorMessage>Amount Cannot be zero</errorMessage>
</ValidationRule>