force-app/main/default/objects/BankTransaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionDate__c</columns>
    <columns>TransactionType__c</columns>
    <columns>AccountName__c</columns>
    <columns>Depositor__c</columns>
    <columns>Status__c</columns>
    <columns>Currency__c</columns>
    <columns>OriginAmount__c</columns>
    <columns>TotalClearedAmount__c</columns>
    <columns>NetBalanceAftCleared__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>